@@ -317,10 +317,10 @@ test matmul-1.0 "multiply matrix - vector" -match numbers -body {
 } -result {3 10 -1}
 
 test matmul-1.1 "multiply vector - matrix" -match numbers -body {
-    set v1 [transpose {1 2 3}] ;# Create row vector
+    set v1 {{1 2 3}} ;# Row vector
     set m  {{0 0 1} {0 5 0} {-1 0 0}}
     matmul $v1 $m
-} -result {-3 10 1}
+} -result {{-3 10 1}}
 
 test matmul-1.2 "multiply matrix - matrix" -match numbers -body {
     set m1 {{0 0 1} {0 5 0} {-1 0 0}}
